Documentation update, also created a static acceptProxies method since it applies to the VM, and not the binding. Correspondingly, the acceptProxies argument has been removed from the bind method.  Also the Multicast argument was removed from the bind operation, it seemed a little superflouous to the operation.